--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,12 @@
       <scope>compile</scope>
     </dependency>
 
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>31.1-jre</version>
+    </dependency>
+
     <!--
            JUnit is a unit testing library for Java.
     -->
@@ -72,6 +78,7 @@
       <version>5.4.0</version>
       <scope>test</scope>
     </dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
