fix: handlers error checking

--- a/pom.xml
+++ b/pom.xml
@@ -256,7 +256,7 @@
         <artifactId>exec-maven-plugin</artifactId>
         <version>1.4.0</version>
         <configuration>
-          <mainClass>edu.brown.cs.student.main.SearchCSV.Main</mainClass>
+          <mainClass>edu.brown.cs.student.main.CSVFunctions.Main</mainClass>
           <arguments/>
         </configuration>
         <executions>
